show status after each action & delete status from options

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "ProxySwitcher": {
       "commandName": "Project",
-      "commandLineArgs": "-c on"
+      "commandLineArgs": "-s"
     }
   }
 }
